--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to Nginx! from carmel okun</title>
+    <title>Welcome to Nginx! from carmel okun pita</title>
 </head>
 <body>
     <h1>Hello from Nginx Docker Container!</h1>
