--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to Nginx! from carmel okun pita pitovsky please now</title>
+    <title>Welcome to Nginx!</title>
 </head>
 <body>
-    <h1>Hello from Nginx Docker Container! pitpita</h1>
+    <h1>Hello from Nginx Docker Container!</h1>
 </body>
 </html>
